# sosaa-gui

./: .gitignore  CITATION.cff  LICENSE  README.md  SOSAA_gui.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
conf/: config.ini  defaults.init  minimal.init
sosaa_gui/: __init__.py  __main__.py  config.py  qt.py  style.py
sosaa_gui/conf/: minimal.init
sosaa_gui/gui/: __init__.py  compile.py  dirs.py  help.py  loadsave.py  output.py  rsm.py  run.py  scenario.py  style.py  syntax.py  terminal.py
sosaa_gui/gui/rsm/: __init__.py  build.py  predict.py  progress.py
sosaa_gui/gui/rsm/plot/: __init__.py  ccn.py  diff.py
sosaa_gui/layouts/: Makefile  about.py  about.ui  gui.py  gui.ui
sosaa_gui/settings/: __init__.py  from_file.py  from_gui.py
sosaa_gui/sosaa_rsm/: __init__.py  sosaa_rf.py
src/: __init__.py  config.py  gui.py  qt.py  resources.py  settings.py  style.py  version.py
src/gui/: __init__.py  browse.py  dirs.py  gui.py  loadsave.py  modules.py  output.py  scenario.py  style.py
src/layouts/: Makefile  gui.py  gui.ui
src/settings/: __init__.py  from_file.py  from_gui.py
