[project]
name = "sosaa-gui"
version = "0.1.0"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Juniper Langenstein", email = "juniper.langenstein@helsinki.fi" },
    { name = "Petri Clusius", email = "petri.clusius@helsinki.fi" },
    { name = "Multi-Scale Modelling group", email = "sosaa@helsinki.fi" }
]
maintainers = [
    { name = "Multi-Scale Modelling group", email = "sosaa@helsinki.fi" }
]

[project.scripts]
sosaa-gui = "sosaa_gui:run"

[dependencies]
darkdetect = "^0.7.1"
f90nml = "^1.4.3"
PyQt5 = "^5.15.7"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
