[project]
name = "sosaa-gui"
version = "0.1.0"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Juniper Tyree", email = "juniper.tyree@helsinki.fi" },
    { name = "Petri Clusius", email = "petri.clusius@helsinki.fi" },
    { name = "Multi-Scale Modelling group", email = "sosaa@helsinki.fi" }
]
maintainers = [
    { name = "Multi-Scale Modelling group", email = "sosaa@helsinki.fi" }
]
dependencies = [
    "darkdetect >= 0.7.1",
    "f90nml >= 1.4.3",
    "matplotlib >= 3.6.0",
    "PyQt5 >= 5.15.7"
]

[project.scripts]
sosaa-gui = "sosaa_gui:run"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sosaa_gui*"]
namespaces = true
